--- a/todo list/style.css
+++ b/todo list/style.css
@@ -92,3 +92,20 @@ ul li .cheaked::before{
     background: url(./images/checked.png);
 }
 
+ul li span{
+    position: absolute;
+    right: 50%;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+ul li span:hover{
+background: #edeef0;
+
+}
+
